
syntax = "proto3";

import "nanover/protocol/trajectory/frame.proto";
import "google/protobuf/struct.proto";

package nanover.protocol.trajectory;

/* A client request to get frame(s) from a trajectory service */
message GetFrameRequest {

  /* Arbitrary data that can be used by a TrajectoryService to decide what frames to return */
  google.protobuf.Struct data = 1;

  /* Interval to send new frames at e.g 1/30 sends 30 frames every second. */
  float frame_interval = 2;
}

/* A server response representing a frame of a molecular trajectory */
message GetFrameResponse {

  /* An identifier for the frame */
  uint32 frame_index = 1;

  /* The frame of the trajectory, which may contain positions and topology information */
  nanover.protocol.trajectory.FrameData frame = 2;

}
